# solus-mate-transition-tool

./: .gitignore  README.md  authorizer  main.py  meson.build  solus-mate-transition-tool  solus-mate-transition.ui
.tx/: config
data/: meson.build  us.getsol.MateTransitionNotification.desktop  us.getsol.matetransition.Authorizer.service  us.getsol.matetransition.conf  us.getsol.matetransition.desktop  us.getsol.matetransition.policy
pkgs/: budgie-pkgs.txt  mate-pkgs.txt  meson.build  xfce-pkgs.txt
po/: LINGUAS  ar.po  ckb.po  cs_CZ.po  de.po  de_AT.po  el.po  es.po  es_ES.po  fi.po  fr_FR.po  he_IL.po  id.po  it_IT.po  mate-transition-tool.pot  meson.build  nl.po  nl_BE.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ru_RU.po  solus-mate-transition-tool.pot  sv_SE.po  tr.po  zh-Hans.po
scripts/: updatePot.sh  updateTranslations.sh
src/: meson.build  solus-mate-transition-notification  solus-mate-transition-notification.py  solus-mate-transition-tool  solus-mate-transition-tool.py  solus-mate-transition.ui  solus-matetransition-authorizer  solus-matetransition-authorizer.py
