# dbus system methods
install_data(
     'us.getsol.matetransition.conf',
     install_dir: path_dbussystemdir,
)

# dbus system services
install_data(
     'us.getsol.matetransition.Authorizer.service',
     install_dir: path_dbussystemservicesdir,
)

# polkit policy
install_data(
     'us.getsol.matetransition.policy',
     install_dir: path_policydir,
)

# Desktop file
install_data(
     'us.getsol.matetransition.desktop',
     install_dir: path_desktopdir,
)

# XDG autostart desktop file
install_data(
     'us.getsol.MateTransitionNotification.desktop',
     install_dir: path_autostartdesktopdir,
)


