install_data(
     'solus-mate-transition.ui',
     install_dir: path_generaldir,
)

install_data(
    'solus-mate-transition-tool.py',
    'solus-mate-transition-notification.py',
    install_dir: path_bindir,
)

install_data(
    'solus-matetransition-authorizer.py',
    install_dir: path_libexecdir,
)
